--- a/html/architecture/LACAMA/index.html
+++ b/html/architecture/LACAMA/index.html
@@ -849,7 +849,7 @@
               <div class="element">
                 <div class="elementTB">
 
-                <div class="blankHTiny"></div>
+                <div class="spacingSmall"></div>
 
                 <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
             </div></div>
@@ -881,18 +881,18 @@
                 <div class="elementTB">
 
                   <h4> <strong> Projects </strong> </h4>
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/byp_b2b_booking/">
                     <h6 class="fontWeight400"> Business Booking Experience </h6>
                   </a>
                   <h6>For pet business owners booking appointments for their customers</h6>
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/byp_b2b_booking/">
                     <h6 class="fontWeight400"> Customer Booking Experience
                     </h6>
                   </a>
                   <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/byp_b2b_subscription/">
                     <h6 class="fontWeight400">Optimizing SaaS Subscription Growth
                     </h6>
@@ -902,21 +902,21 @@
 
 
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/refining_rx_zero/">
                     <h6 class="fontWeight400"> RX Zero</h6>
                   </a>
                   <h6>Subscription-based generic medication selling</h6>
 
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/savings_calculator/">
                     <h6 class="fontWeight400"> Savings Calculator</h6>
 
                   </a>
                   <h6>Uncover Prescription Meds Savings</h6>
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/admin_panel/">
                     <h6 class="fontWeight400">Admin Panel</h6>
                   </a>
@@ -930,20 +930,20 @@
                 <div class="elementTB">
 
                   <h4> <strong> Experiments </strong> </h4>
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/glorify/">
                     <h6 class="fontWeight400"> Glorify</h6>
                   </a>
                   <h6>Elevating Community Involvement</h6>
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
 
                   <a href="/appointa/">
                     <h6 class="fontWeight400"> Appointa</h6>
                   </a>
                   <h6>Simplifying Interview Coordination</h6>
 
-                  <div class="blankHTiny"></div>
+                  <div class="spacingSmall"></div>
                   <a href="/seer/">
                     <h6 class="fontWeight400">Seer</h6>
                   </a>
