--- a/html/index.html
+++ b/html/index.html
@@ -280,7 +280,7 @@
 
   <!-- Content -->
   <section id="projects">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXS"></div>
 
       <!-- Arrow -->
@@ -737,7 +737,7 @@
 
   </section>
   <section id="design_system">
-    <div class="colorBgWhie pattern2">
+    <div class="colorBgWhite pattern2">
       <div class="blankHXS"></div>
 
       <!-- Arrow -->
