--- a/html/photography/index.html
+++ b/html/photography/index.html
@@ -40,6 +40,24 @@
   <link rel="manifest" href="/site.webmanifest">
 
  <!-- =================== FONT Starts====================== -->
+<link href="https://api.fontshare.com/v2/css?f[]=satoshi@300,400,500,700&display=swap" rel="stylesheet">
+<link href="https://api.fontshare.com/v2/css?f[]=general-sans@300,400,500,700&display=swap" rel="stylesheet">
+<link href="https://api.fontshare.com/v2/css?f[]=clash-display@400,500,600,700&display=swap" rel="stylesheet">
+<link href="https://api.fontshare.com/v2/css?f[]=ranade@300,400,500,700&display=swap" rel="stylesheet">
+
+
+
+<!--   <div class="spacingSmall"></div>
+
+font-family: "Satoshi", sans-serif;
+font-family: "General Sans", sans-serif;
+font-family: "Clash Display", sans-serif;
+font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but still classified differently */ 
+-->
+
+
+
+
   <!-- Google Font Preconnect-->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
