--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -98,6 +98,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
   <link rel="stylesheet" href="/main.css">
   <script defer src="/scripts.js"></script>
 
+
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
   <script>
@@ -6548,27 +6549,27 @@ strong {
 
                           <li class="nav-item marginZero active activeNav">
 
-                            <a href="/" class="nav-link box">PROJECT</a>
+                            <a href="/" class="nav-link_archived box">PROJECT</a>
                           </li>
 
                           <li class="nav-item marginZero inactive">
 
-                            <a href="/architecture" class="nav-link box">ARCHITECTURE</a>
+                            <a href="/architecture" class="nav-link_archived box">ARCHITECTURE</a>
                           </li>
 
                           <li class="nav-item marginZero inactive">
 
-                            <a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+                            <a href="/photography" class="nav-link_archived box">PHOTOGRAPHY</a>
                           </li>
 
                           <li class="nav-item marginZero inactive">
 
-                            <a href="/blog" class="nav-link box">BLOG</a>
+                            <a href="/blog" class="nav-link_archived box">BLOG</a>
                           </li>
 
                           <li class="nav-item marginZero inactive">
 
-                            <a href="/about" class="nav-link box">ABOUT</a>
+                            <a href="/about" class="nav-link_archived box">ABOUT</a>
                           </li>
 
                         </ul>
@@ -6620,19 +6621,19 @@ strong {
                       <div class="navbar">
                         <ul class="nav-menu">
                           <li class="nav-item marginZero active activeNav">
-                            <a href="/" class="nav-link box">PROJECT</a>
+                            <a href="/" class="nav-link_archived box">PROJECT</a>
                           </li>
                           <li class="nav-item marginZero inactive">
-                            <a href="/architecture" class="nav-link box">ARCHITECTURE</a>
+                            <a href="/architecture" class="nav-link_archived box">ARCHITECTURE</a>
                           </li>
                           <li class="nav-item marginZero inactive">
-                            <a href="/photography" class="nav-link box">PHOTOGRAPHY</a>
+                            <a href="/photography" class="nav-link_archived box">PHOTOGRAPHY</a>
                           </li>
                           <li class="nav-item marginZero inactive">
-                            <a href="/blog" class="nav-link box">BLOG</a>
+                            <a href="/blog" class="nav-link_archived box">BLOG</a>
                           </li>
                           <li class="nav-item marginZero inactive">
-                            <a href="/about" class="nav-link box">ABOUT</a>
+                            <a href="/about" class="nav-link_archived box">ABOUT</a>
                           </li>
                         </ul>
                       </div>
