--- a/html/index.html
+++ b/html/index.html
@@ -98,6 +98,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
   <link rel="stylesheet" href="/main.css">
   <script defer src="/scripts.js"></script>
 
+
   <!-- Google Analytics -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-E8YXDWJST2"></script>
   <script>
@@ -175,16 +176,16 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <div class="navbar">
         <ol class="nav-menu colorBgVW">
           <li class="nav-item active activeNav box">
-            <a href="#projects" class="nav-link">PROJECTS</a>
+            <a href="#projects" class="nav-link_archived">PROJECTS</a>
           </li>
           <li class="nav-item active activeNav box">
-            <a href="#experiments" class="nav-link ">EXPERIMENTS</a>
+            <a href="#experiments" class="nav-link_archived ">EXPERIMENTS</a>
           </li>
           <li class="nav-item active activeNav box">
-            <a href="#design_system" class="nav-link ">DESIGN SYSTEM</a>
+            <a href="#design_system" class="nav-link_archived ">DESIGN SYSTEM</a>
           </li>
           <li class="nav-item active activeNav box">
-            <a href="#about" class="nav-link ">ABOUT</a>
+            <a href="#about" class="nav-link_archived ">ABOUT</a>
           </li>
         </ol>
       </div>
