--- a/html/index.html
+++ b/html/index.html
@@ -766,9 +766,12 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
         <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
             <div class="element">
-              <h2 class="fontWeight500 Grey600">vickywang.me</h2>
+              <h1 class="fontWeight500 Grey600">vickywang.me</h1>
+
               <h4 class="">Marketplace & platform UX for high-volume users</h4>
             </div>
+            <div class="spacingSmall"></div>
+
             <div class="rowLeftAligned">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
@@ -791,7 +794,19 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
           </div>
 
         </div>
-        <div class="spacingLarge"></div>
+        <div class="Grid Grid--full Grid--gutter">
+          <div class="Grid-cell">
+            <div class="element">
+              <div class="spacingXLarge"></div>
+              
+                <h4 class="" id="backToTop">Back to top</h4>
+             
+            </div>
+          </div>
+        </div>
+
+
+        <div class="spacingMedium"></div>
         <div class="Grid Grid--full Grid--gutters">
           <div class="Grid-cell">
             <div class="footerBorder">
