--- a/html/appointa/index.html
+++ b/html/appointa/index.html
@@ -202,7 +202,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
   <div class="colorBgAPPOINTA">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <div class="blankMin1880"></div>
       <img src="Mockup.png" alt="APPOINTA">
 
