--- a/html/glorify/index.html
+++ b/html/glorify/index.html
@@ -202,7 +202,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
   <div class="colorBgGLORIFY">
     <div class="blankPhone"></div>
 
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <img src="Mockup.png" alt="GLORIFY">
       <div class="ProjectBannerInnerND">
         <img class="widthXXS" src="Logo_Glorify.png" alt="GLORIFY">
@@ -461,10 +461,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
       <div class="Grid Grid--gutters Grid--cols-3 u-textCenter ">
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS " data-gif="HiFi_GroupPrayer_QuickStartPtt.gif" data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
 
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
@@ -483,10 +483,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
 
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
@@ -503,10 +503,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
 
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCover.png" src="HiFi_GroupPrayerCover.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
@@ -538,10 +538,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
       <div class="Grid Grid--gutters Grid--cols-2 u-textCenter">
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
           </div>
@@ -556,10 +556,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
         </div>
 
         <div class="Grid-cell">
-          <div class="element displayLaptop progress">
+          <div class="element displayDesktop progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancement.png" src="HiFi_FinalEnhancement.png" />
           </div>
-          <!-- displayLaptop -->
+          <!-- displayDesktop -->
           <div class="element displayTablet progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
           </div>
@@ -4066,10 +4066,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
               <div class="TBslidesItem slide-1" id="slide-1" aria-label="slide 1 of 2" tabindex="0">
                 <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
                   <div class="Grid-cell">
-                    <div class="element displayLaptop progress">
+                    <div class="element displayDesktop progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" />
                     </div>
-                    <!-- displayLaptop -->
+                    <!-- displayDesktop -->
                     <div class="element displayTablet progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
@@ -4085,10 +4085,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
                   </div>
 
                   <div class="Grid-cell">
-                    <div class="element displayLaptop progress">
+                    <div class="element displayDesktop progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" />
                     </div>
-                    <!-- displayLaptop -->
+                    <!-- displayDesktop -->
                     <div class="element displayTablet progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
@@ -4111,10 +4111,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
                 <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
                   <div class="Grid-cell">
-                    <div class="element displayLaptop progress">
+                    <div class="element displayDesktop progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersion.png" />
                     </div>
-                    <!-- displayLaptop -->
+                    <!-- displayDesktop -->
                     <div class="element displayTablet progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
@@ -4130,10 +4130,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
                   </div>
 
                   <div class="Grid-cell">
-                    <div class="element displayLaptop progress">
+                    <div class="element displayDesktop progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersion.png" />
                     </div>
-                    <!-- displayLaptop -->
+                    <!-- displayDesktop -->
                     <div class="element displayTablet progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
@@ -4893,10 +4893,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
           <!-- Img -->
           <div class="Grid Grid--gutters Grid--cols-2 u-textCenter wrapper">
             <div class="Grid-cell">
-              <div class="element displayLaptop progress">
+              <div class="element displayDesktop progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayer.png" src="HiFi_FinalPrayer.png" />
               </div>
-              <!-- displayLaptop -->
+              <!-- displayDesktop -->
               <div class="element displayTablet progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
               </div>
@@ -4911,10 +4911,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
             </div>
 
             <div class="Grid-cell">
-              <div class="element displayLaptop progress">
+              <div class="element displayDesktop progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancement.png" src="HiFi_FinalEnhancement.png" />
               </div>
-              <!-- displayLaptop -->
+              <!-- displayDesktop -->
               <div class="element displayTablet progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
               </div>
