--- a/html/seer/index.html
+++ b/html/seer/index.html
@@ -203,7 +203,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
   <div class="BGseer2_1">
     <div class="blankPhone"></div>
     <div class="blankHS"></div>
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <div class="blankMin1880"></div>
       <img class="" src="Mockup.png" alt="SEER">
 
