--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -188,7 +188,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
   <!-- header image -->
   <div class="colorBgVW pattern2">
     <div class="blankPhone"></div>
-    <div class="ProjectBanner displayLaptop">
+    <div class="ProjectBanner displayDesktop">
       <div class="blankMin1880"></div>
       <img src="MockupL.png" alt="vickywang.me">
 
