card layout final

--- a/html/index.html
+++ b/html/index.html
@@ -237,10 +237,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <h5 class="card25CardDescription">Scaled inventory from hobbyist QPs to power users with a unified editing surface.</h5>
 
       <h5 class="card25CardList">→ 3× faster edits for high-volume providers</h5>
+      <div class="spacingLarge displayDesktop"></div>
+      <div class="spacingLarge displayTablet"></div>
 
-      <div class="spacingLarge"></div>
-
-
+      <div class="spacingSmall displayMobile"></div>
 
       <div class="">
         <!-- Trigger 1 -->
@@ -269,6 +269,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
           </div>
         </div>
       </div>
+      <div class="spacingXSmall displayMobile"></div>
 
 
 
