--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -215,9 +215,9 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
       </div>
     </div>
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupS.png" alt="vickywang.me">
+      <img class="displayMobile" src="MockupS.png" alt="vickywang.me">
       <div class="ProjectBannerInnerND">
         <h1><strong>Design System</strong> </h1>
         <h3 class="Grid Grid--center colorBlack">Click, hover, or adjust the viewport to observe the responsive layout
