--- a/html/glorify/index.html
+++ b/html/glorify/index.html
@@ -236,9 +236,9 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
         <div class="blankHXS"></div>
       </div>
     </div>
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupXS.png" alt="GLORIFY">
+      <img class="displayMobile" src="MockupXS.png" alt="GLORIFY">
       <div class="ProjectBannerInnerND">
         <img class="widthXXS" src="Logo_Glorify.png" alt="GLORIFY">
 
@@ -471,10 +471,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
           </div>
           <!-- displayTablet -->
 
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_QuickStartPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
 
           <div class="element">
             <h4> Quick start group prayer</h4>
@@ -491,10 +491,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
           <!-- displayTablet -->
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_CustomPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
 
           <div class="element">
             <h4> Customized group prayer</h4>
@@ -511,10 +511,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
           <!-- displayTablet -->
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_GroupPrayer_JoinPtt.gif" data-static="HiFi_GroupPrayerCoverTap.png" src="HiFi_GroupPrayerCoverTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
 
           <div class="element">
             <h4> Join group prayer</h4>
@@ -546,10 +546,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
           </div>
           <!-- displayTablet -->
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
           <div class="element">
             <h4> Hi-fi prototype </h4>
           </div>
@@ -564,10 +564,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
             <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
           </div>
           <!-- displayTablet -->
-          <div class="element displayPhone progress">
+          <div class="element displayMobile progress">
             <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
           </div>
-          <!-- displayPhone -->
+          <!-- displayMobile -->
           <div class="element">
             <h4> Enhancement </h4>
           </div>
@@ -4074,10 +4074,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
                     <!-- displayTablet -->
-                    <div class="element displayPhone progress">
+                    <div class="element displayMobile progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
-                    <!-- displayPhone -->
+                    <!-- displayMobile -->
                     <div class="element">
                       <h4> Previous version
                       </h4>
@@ -4093,10 +4093,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
                     <!-- displayTablet -->
-                    <div class="element displayPhone progress">
+                    <div class="element displayMobile progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Create_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
-                    <!-- displayPhone -->
+                    <!-- displayMobile -->
                     <div class="element">
                       <h4> Current version
                       </h4>
@@ -4119,10 +4119,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
                     <!-- displayTablet -->
-                    <div class="element displayPhone progress">
+                    <div class="element displayMobile progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_PreviousVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_PreviousVersionTap.png" />
                     </div>
-                    <!-- displayPhone -->
+                    <!-- displayMobile -->
                     <div class="element">
                       <h4> Previous version
                       </h4>
@@ -4138,10 +4138,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
                     <!-- displayTablet -->
-                    <div class="element displayPhone progress">
+                    <div class="element displayMobile progress">
                       <img class="gif-toggle widthS" data-gif="Iterate_Flow_GroupPrayer_Join_CurrentVersion.gif" data-static="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" src="Iterate_Flow_GroupPrayer_Create_CurrentVersionTap.png" />
                     </div>
-                    <!-- displayPhone -->
+                    <!-- displayMobile -->
                     <div class="element">
                       <h4> Current version
                       </h4>
@@ -4901,10 +4901,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
               </div>
               <!-- displayTablet -->
-              <div class="element displayPhone progress">
+              <div class="element displayMobile progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalPrayerTap.png" src="HiFi_FinalPrayerTap.png" />
               </div>
-              <!-- displayPhone -->
+              <!-- displayMobile -->
               <div class="element">
                 <h4> Hi-fi prototype </h4>
               </div>
@@ -4919,10 +4919,10 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalEnhancement.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
               </div>
               <!-- displayTablet -->
-              <div class="element displayPhone progress">
+              <div class="element displayMobile progress">
                 <img class="gif-toggle widthS" data-gif="HiFi_FinalPrayer.gif" data-static="HiFi_FinalEnhancementTap.png" src="HiFi_FinalEnhancementTap.png" />
               </div>
-              <!-- displayPhone -->
+              <!-- displayMobile -->
               <div class="element">
                 <h4> Enhancement </h4>
               </div>
