--- a/html/index.html
+++ b/html/index.html
@@ -230,7 +230,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
 
 <div class="wrapper">
-  <div class="card card25">
+  <div class="card">
     <div class="card__left">
       <p class="card25CardMeta">Business Facing Partner Portal • Q3 2025</p>
       <h2 class="card25CardTitle">BabyQuip Inventory Management</h2>
@@ -247,6 +247,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium buttonPrimary">View Case Study</button>
         </a>
+
         <!-- Modal 1 -->
         <div id="modal1" class="modal hidden">
           <span class="modal-close">
@@ -786,7 +787,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
             <a href="/design_system/">
               <img class="displayDesktop" src="/projectImages/site25_desktop.svg" alt="Design System">
               <img class="displayTablet" src="/projectImages/site25_tablet.svg" alt="Design System">
-              <img class="displayPhone" src="/projectImages/site25_mobile.svg" alt="Design System">
+              <img class="displayMobile" src="/projectImages/site25_mobile.svg" alt="Design System">
             </a>
           </div>
         </div>
