--- a/html/seer/index.html
+++ b/html/seer/index.html
@@ -223,9 +223,9 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
       </div>
     </div>
-    <div class="ProjectBanner displayPhone">
+    <div class="ProjectBanner displayMobile">
       <div class="blankMin1880"></div>
-      <img class="displayPhone" src="MockupXS.png" alt="SEER">
+      <img class="displayMobile" src="MockupXS.png" alt="SEER">
       <div class="ProjectBannerInner">
         <a href="https://www.figma.com/proto/X6ERoTDqPOY9rzJFA7IsKL/SEER?page-id=402%3A4188&node-id=402%3A4228&viewport=674%2C699%2C0.1&scaling=scale-down&starting-point-node-id=402%3A4228"
           target="_blank"> <button class="button-35 SEER">Slide Deck</button></a>
