--- a/html/index.html
+++ b/html/index.html
@@ -234,14 +234,12 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <p class="card25CardMeta">Business Facing Partner Portal • Q3 2025</p>
       <h2 class="card25CardTitle">BabyQuip Inventory Management</h2>
       <h5 class="card25CardDescription">Scaled inventory from hobbyist QPs to power users with a unified editing surface.</h5>
-      <h5 class="card25CardList">→ 3× faster edits for high-volume providers</h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <div class="spacingLarge displayDesktop"></div>
-      <div class="spacingMedium displayTablet"></div>
-      <div class="spacingXSmall displayMobile"></div>
+      <h5 class="card25CardList ">→ 3× faster edits for high-volume providers</h5>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
 
-      <div class="">
+
+      <div class=" card__cta">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium buttonPrimary">View Case Study</button>
@@ -295,14 +293,12 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <p class="card25CardMeta">Consumer - Facing • Q4 2024 - Q1 2025</p>
       <h2 class="card25CardTitle">Gear-First Experience Enhancements</h2>
       <h5 class="card25CardDescription">Stabilized a post-launch Gear-First marketplace by reducing friction across discovery, selection, and checkout without disrupting an in-production system.</h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <div class="spacingLarge displayDesktop"></div>
-      <div class="spacingMedium displayTablet"></div>
-      <div class="spacingXSmall displayMobile"></div>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
 
-      <div class="">
+
+      <div class=" card__cta">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium buttonPrimary">View Case Study</button>
@@ -357,14 +353,12 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <p class="card25CardMeta">Business-Facing • Q3 2025 (launch in progress)</p>
       <h2 class="card25CardTitle">BabyQuip Package System for Growth</h2>
       <h5 class="card25CardDescription">Introduced a standardized package system that enables marketing-led promotions and higher AOV, while preserving provider flexibility for custom offerings.</h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <div class="spacingLarge displayDesktop"></div>
-      <div class="spacingMedium displayTablet"></div>
-      <div class="spacingXSmall displayMobile"></div>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
 
-      <div class="">
+
+      <div class=" card__cta">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium buttonPrimary">View Case Study</button>
@@ -433,14 +427,12 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <p class="card25CardMeta">Business - Facing • Q3 2025 (Paused)</p>
       <h2 class="card25CardTitle">Modular Provider Onboarding Framework (Exploratory)</h2>
       <h5 class="card25CardDescription">Designed a category-aware onboarding framework to replace a rigid 30+ screen flow, enabling optional setup paths and future category expansion.</h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <div class="spacingLarge displayDesktop"></div>
-      <div class="spacingMedium displayTablet"></div>
-      <div class="spacingXSmall displayMobile"></div>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
 
-      <div class="removeCAT">
+
+      <div class="removeCAT card__cta">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium ">View Case Study</button>
@@ -494,14 +486,12 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <p class="card25CardMeta">Business - Facing • 2021 - 2024</p>
       <h2 class="card25CardTitle">BookYourPet Platform Simplification &amp; Booking Flexibility</h2>
       <h5 class="card25CardDescription">Rebuilt an over-engineered B2B platform into a configurable booking system that supports many pet-care business models without custom builds.</h5>
-      <h5 class="card25CardList">→ Unified services, pricing, duration, and add-ons into one flexible booking + calendar model</h5>
-      <h5 class="card25CardList">→ Reduced setup time, booking errors, and support load by aligning the UI with real business workflows</h5>
-      <h5 class="card25CardList"></h5>
-      <div class="spacingLarge displayDesktop"></div>
-      <div class="spacingMedium displayTablet"></div>
-      <div class="spacingXSmall displayMobile"></div>
+      <h5 class="card25CardList ">→ Unified services, pricing, duration, and add-ons into one flexible booking + calendar model</h5>
+      <h5 class="card25CardList ">→ Reduced setup time, booking errors, and support load by aligning the UI with real business workflows</h5>
+      <h5 class="card25CardList displayNone"></h5>
 
-      <div class="">
+
+      <div class=" card__cta">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium buttonFlip">View Systems Case Study</button>
@@ -572,14 +562,12 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <p class="card25CardMeta">SuperAdmin – internal tool • Q4 2023</p>
       <h2 class="card25CardTitle">LASO Super Admin Platform Concept</h2>
       <h5 class="card25CardDescription">Defined a scalable admin system to unify B2B/D2C user management, billing, and operational visibility.</h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <div class="spacingLarge displayDesktop"></div>
-      <div class="spacingMedium displayTablet"></div>
-      <div class="spacingXSmall displayMobile"></div>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
 
-      <div class="">
+
+      <div class=" card__cta">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium buttonFlip">Concept Overview</button>
@@ -635,14 +623,12 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <p class="card25CardMeta">Consumer - Facing • Q3 2025 • Concept + IA direction (paused)</p>
       <h2 class="card25CardTitle">Re-architected SEO-to-rent</h2>
       <h5 class="card25CardDescription">Discovery with trip-aware routing and category clarity to support BabyQuip’s expansion into B2C.</h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <h5 class="card25CardList"></h5>
-      <div class="spacingLarge displayDesktop"></div>
-      <div class="spacingMedium displayTablet"></div>
-      <div class="spacingXSmall displayMobile"></div>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
+      <h5 class="card25CardList displayNone"></h5>
 
-      <div class="removeCAT">
+
+      <div class="removeCAT card__cta">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium buttonFlip">Research Overview</button>
@@ -698,14 +684,12 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <p class="card25CardMeta">Concept Exploration • Q4 2025</p>
       <h2 class="card25CardTitle">Explored an alternative marketplace model to reduce Gear-First UX friction</h2>
       <h5 class="card25CardDescription">Concept exploration proposing a filter-driven marketplace to eliminate placeholder inventory and shorten cart-to-provider loops.</h5>
-      <h5 class="card25CardList">→ Reframed “Gear-First” as filter-first using real provider inventory instead of placeholder items</h5>
-      <h5 class="card25CardList">→ Unified providers, filters, and map context into a single decision surface to reduce rework loops</h5>
-      <h5 class="card25CardList">→ Removed fake inventory states to improve trust, availability clarity, and checkout efficiency</h5>
-      <div class="spacingLarge displayDesktop"></div>
-      <div class="spacingMedium displayTablet"></div>
-      <div class="spacingXSmall displayMobile"></div>
+      <h5 class="card25CardList ">→ Reframed “Gear-First” as filter-first using real provider inventory instead of placeholder items</h5>
+      <h5 class="card25CardList ">→ Unified providers, filters, and map context into a single decision surface to reduce rework loops</h5>
+      <h5 class="card25CardList ">→ Removed fake inventory states to improve trust, availability clarity, and checkout efficiency</h5>
 
-      <div class="removeCAT">
+
+      <div class="removeCAT card__cta">
         <!-- Trigger 1 -->
         <a href="" class="open-modal alignBottom cta" data-modal="modal1">
           <button class="buttonMedium "></button>
@@ -960,7 +944,7 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
 
   </section>
 
-        <footer class="colorFooterBg">
+    <footer class="colorFooterBg">
     <div class="spacingSmall"></div>
     <div class="wrapper">
       <div class="element">
