working principles section

--- a/html/index.html
+++ b/html/index.html
@@ -206,38 +206,23 @@ font-family: "Ranade", serif; /* Ranade is a serif-ish transitional grotesk, but
       <div class="Grid Grid--full Grid--gutter">
         <div class="Grid-cell">
           <div class="element">
-            <h1 class="fontWeight300"> My working principles
-            </h1>
+            <h2 class="fontWeight300"> My working principles
+            </h2>
           </div>
         </div>
       </div>
-
-
-
       <div class="Grid Grid--gutters Grid--cols-3">
         <div class="Grid-cell">
-
-          <h4 class="txtnIcon marginRight">
-            <!-- <span class="txtnIcon-icon">&#183;</span> -->
-            <span> Start from constraints, not ideas
-            </span>
-          </h4>
+          <h5 class="marginRight">Start from constraints, not ideas
+          </h5>
+        </div>
+        <div class="Grid-cell">
+          <h5 class="marginRight"> Collapse systems before polishing flows
+          </h5>
         </div>
         <div class="Grid-cell marginRight">
-          <h4 class="txtnIcon">
-            <!-- <span class="txtnIcon-icon">&#183;</span> -->
-            <span>
-              Collapse systems before polishing flows
-            </span>
-          </h4>
-        </div>
-        <div class="Grid-cell marginRight">
-          <h4 class="txtnIcon">
-            <!-- <span class="txtnIcon-icon">&#183;</span> -->
-            <span>
-              Measure success by reduced friction, not feature count
-            </span>
-          </h4>
+          <h5 class="marginRight"> Measure success by reduced friction, not feature count
+          </h5>
         </div>
 
       </div>
