design system and footer

--- a/html/design_system/index.html
+++ b/html/design_system/index.html
@@ -7265,160 +7265,66 @@ strong {
     <div id="modal-caption" class="modal-caption"></div>
   </div>
   <!-- The Modal -->
-    <!-- back to top -->
-  <button id="myBtn" title="Back to top">
-    <div id="dad">
-      <div id="bro">
-        <img src="/icon/arrow-top.svg" alt="back to top">
-      </div>
-      <div id="sis">
-        TOP
-      </div>
-    </div>
-  </button>
-  <!--back to top-->
-    
-  
 
-  <footer class="borderTop  ">
-
-    <div class="blankHXXS"></div>
+    <footer class="colorFooterBg">
+    <div class="spacingSmall"></div>
     <div class="wrapper">
-
       <div class="element">
-
-        <div class="Grid Grid--gutters Grid--1of4">
+        <div class="Grid Grid--full Grid--gutter">
           <div class="Grid-cell">
-              <div class="element">
-                <div class="elementTB">
+            <div class="element">
+              <h1 class="fontWeight500 Grey600">vickywang.me</h1>
 
-                <div class="spacingSmall"></div>
+              <h4 class="">Marketplace & platform UX for high-volume users</h4>
+            </div>
+            <div class="spacingSmall"></div>
 
-                <a href="/" class=""><img class="widthXS" src="/icon/LOGOtxt.svg" alt="VW" title="vickywang.me"></a>
-            </div></div>
-            <div class="Grid Grid--gutters">
+            <div class="rowLeftAligned">
               <div class="ClipboardBoxIconOnly">
                 <button class="ClipboardIconOnly">
-                  <img title="Copy Email Address to Clipboard" class="iconM   paddingS fitContent borderRadiusMax" title="Copy to Clipboard" src="/icon/mail.svg" alt="LinkedIn">
+                  <img title="Copy Email Address to Clipboard" class="iconS hoverWhite paddingS fitContent borderRadiusMax" src="/icon/mail.svg" alt="LinkedIn">
                   <p class="clickIconCopy">vickyw.design@gmail.com</p>
                 </button>
               </div>
               <a target="_blank" href="https://www.linkedin.com/in/vicky-wyq/" title="LinkedIn">
-                <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
+                <img class="iconS hoverWhite paddingS fitContent borderRadiusMax" src="/icon/in.svg" alt="LinkedIn">
               </a>
 
               <a target="_blank" href="https://github.com/vicky-wyq">
-                <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
+                <img class="iconS hoverWhite paddingS fitContent borderRadiusMax" src="/icon/git.svg" alt="GitHub" title="GitHub">
               </a>
 
               <a target="_blank" href="https://codepen.io/vicky-wyq" title="CodePen">
-                <img class="iconM  paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
+                <img class="iconS hoverWhite paddingS fitContent borderRadiusMax" src="/icon/Codepen.svg" alt="CodePen">
               </a>
             </div>
           </div>
-          <div class="Grid-cell">
 
-            <div class="Grid Grid--gutters Grid--cols-2">
+        </div>
 
-              <div class="Grid-cell">
-                <div class="elementTB">
 
-                  <h4> <strong> Projects </strong> </h4>
-                  <div class="spacingSmall"></div>
-                  <a href="/byp_b2b_booking/">
-                    <h6 class="fontWeight400"> Business Booking Experience </h6>
-                  </a>
-                  <h6>For pet business owners booking appointments for their customers</h6>
-                  <div class="spacingSmall"></div>
-                  <a href="/byp_b2b_booking/">
-                    <h6 class="fontWeight400"> Customer Booking Experience
-                    </h6>
-                  </a>
-                  <h6>Optimizing the booking process to improve customer satisfaction and drive higher engagement.</h6>
-                  <div class="spacingSmall"></div>
-                  <a href="/byp_b2b_subscription/">
-                    <h6 class="fontWeight400">Optimizing SaaS Subscription Growth
-                    </h6>
-                  </a>
-                  <h6>Optimize the B2B onboarding and subscription experience</h6>
+        <div class="spacingXLarge"></div>
+        <div class="spacingMedium"></div>
 
 
 
 
-                  <div class="spacingSmall"></div>
-                  <a href="/refining_rx_zero/">
-                    <h6 class="fontWeight400"> RX Zero</h6>
-                  </a>
-                  <h6>Subscription-based generic medication selling</h6>
+        <div class="row centerVer footerBorder">
+          <div class="element">
 
-
-                  <div class="spacingSmall"></div>
-                  <a href="/savings_calculator/">
-                    <h6 class="fontWeight400"> Savings Calculator</h6>
-
-                  </a>
-                  <h6>Uncover Prescription Meds Savings</h6>
-
-                  <div class="spacingSmall"></div>
-                  <a href="/admin_panel/">
-                    <h6 class="fontWeight400">Admin Panel</h6>
-                  </a>
-                  <h6>Empowering CX managers and sales teams</h6>
-                </div>
-              </div>
-
-
-
-              <div class="Grid-cell">
-                <div class="elementTB">
-
-                  <h4> <strong> Experiments </strong> </h4>
-                  <div class="spacingSmall"></div>
-                  <a href="/glorify/">
-                    <h6 class="fontWeight400"> Glorify</h6>
-                  </a>
-                  <h6>Elevating Community Involvement</h6>
-
-                  <div class="spacingSmall"></div>
-
-                  <a href="/appointa/">
-                    <h6 class="fontWeight400"> Appointa</h6>
-                  </a>
-                  <h6>Simplifying Interview Coordination</h6>
-
-                  <div class="spacingSmall"></div>
-                  <a href="/seer/">
-                    <h6 class="fontWeight400">Seer</h6>
-                  </a>
-                  <h6>Empowering Brand Managers with Insights</h6>
-
-
-
-                </div>
-              </div>
-
-
-
-
-
-            </div>
-
+            <h6 class="Grey700"> &#169; 2020 - 2025 vickywang.me</h6>
           </div>
+          <div class="element backToTop" id="backToTop">
+
+            <h5 class="">Back to top</h5>
+          </div>
+
+
         </div>
       </div>
-      <div class="blankHXS"></div>
-      <div class="Grid Grid--full Grid--gutters">
-        <div class="Grid-cell">
-          <div class="footerBorder">
-            <div class="element">
-              <h5 class="Grey700"> &#169; 2020 - 2025 vickywang.me | shaping seamless digital experiences.</h5>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
   </footer>
+
+  
   <!-- Shared across the platform -->
 </body>
 
